--- a/readme
+++ b/readme
@@ -1,1 +1,9 @@
-
+#DenViz
+Задачи:
+1. Генерация различных данных и их сохранение (Татьяна Глушко)
+Ссылка на личное хранилище:
+2. Создание текстуры и нанесение на нее данных (Валерия Набатова)
+Ссылка на личное хранилище: https://github.com/veilanexyz/misis2023f-22-03-nabatova-v-a
+3. Создание тепловой карты плотности распределения, нанесение текстур на сферу, оценка плотности распределения (Анастасия Ясакова, Ирина Дудко)
+Ссылка на личное хранилище(Анастасия): https://github.com/AnastasiayA26/misis2023f-22-03-yasakova-a-m
+Ссылка на личное хранилище(Ирина):
